<resources>
    <string name="app_name">Bashful Clock</string>

    <string name="pref_title_date_format_in_english">In English</string>
    <string name="pref_description_date_format_in_english">Date format in English</string>
    <string name="pref_key_date_format_in_english" translatable="false">date_format_in_english</string>
    <bool name="pref_default_value_date_format_in_english">false</bool>

    <string name="pref_title_duration">Duration</string>
    <string name="pref_description_duration">How long to display the message</string>
    <string name="pref_key_duration" translatable="false">duration</string>
    <string-array name="pref_entries_duration">
        <item>Long</item>
        <item>Short</item>
    </string-array>
    <string name="pref_entryValues_duration_long" translatable="false">4.0</string>
    <string-array name="pref_entryValues_duration">
        <item>@string/pref_entryValues_duration_long</item>
        <item>2.0</item>
    </string-array>
    <string name="pref_default_value_duration" translatable="false">@string/pref_entryValues_duration_long</string>

    <string name="pref_title_fadeout">Fadeout</string>
    <string name="pref_key_fadeout" translatable="false">fadeout</string>
    <bool name="pref_default_value_fadeout">true</bool>

    <string name="pref_title_date_format">Date format</string>
    <string name="pref_key_date_format" translatable="false">date_format</string>
    <string name="pref_def_value_date_format">yyyy/MM/dd(E) HH:mm:ss</string>
    <string-array name="pref_entries_date_format">
        <item>@string/pref_def_value_date_format</item>
        <item>yy/MM/dd HH:mm:ss</item>
        <item>yyyy/MM/dd(E)\nHH:mm:ss</item>
        <item>yyyy/MM/dd(E)\n和暦長\nHH:mm:ss</item>
        <item>yyyy(和暦短) MM/dd(E)\nHH:mm:ss</item>
    </string-array>

    <string name="pref_title_text_size">Text size</string>
    <string name="pref_key_text_size" translatable="false">text_size</string>
    <string-array name="pref_entries_text_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>
    <string name="pref_entryValues_text_size_small" translatable="false">small</string>
    <string name="pref_entryValues_text_size_medium" translatable="false">medium</string>
    <string name="pref_entryValues_text_size_large" translatable="false">large</string>
    <string name="pref_entryValues_text_size_xlarge" translatable="false">xlarge</string>
    <string-array name="pref_entryValues_text_size">
        <item>@string/pref_entryValues_text_size_small</item>
        <item>@string/pref_entryValues_text_size_medium</item>
        <item>@string/pref_entryValues_text_size_large</item>
        <item>@string/pref_entryValues_text_size_xlarge</item>
    </string-array>
    <string name="pref_default_value_text_size" translatable="false">@string/pref_entryValues_text_size_medium</string>

    <string name="notification_channel_name">Background Service</string>
    <string name="notification_channel_description">Detects unlock screen. This notification is necessary to operate in the background, but it can be hidden.</string>
    <string name="notification_content_text">Tap to change your settings.</string>

    <string name="open_source_licenses">Open source licenses</string>
</resources>
